--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ piston2d-graphics = "0.43.0"
 pistoncore-glutin_window = "0.70.1"
 piston2d-opengl_graphics = "0.82.0"
 rand = "0.8.5"
+itertools = "0.10.5"
